feat: adding features on menu, adding querys on JPA and fix models.